# agent-shell-coordination

./: 404.html  README.md  index.html  journal-agent-shell-coordination.mdx  mkdocs.yml  pyproject.toml  sitemap.xml
.worktrees/issue-67fea13a-06-conflict-detector/: .claude_output_767ced7b96bd.json  .gitignore  pyproject.toml  setup.py
.worktrees/issue-67fea13a-06-conflict-detector/mat/: cli.py  coordinator.py  exceptions.py
.worktrees/issue-67fea13a-06-conflict-detector/mat/coordination/: conflict_detector.py
.worktrees/issue-67fea13a-06-conflict-detector/mat/execution/: command_executor.py
.worktrees/issue-67fea13a-06-conflict-detector/mat/tests/: test_agent_registry.py  test_conflict_detector.py
.worktrees/issue-67fea13a-06-conflict-detector/mat/tests/integration/: __init__.py
.worktrees/issue-67fea13a-07-command-executor/: MANIFEST.in  README.md
.worktrees/issue-67fea13a-07-command-executor/mat/: __init__.py
.worktrees/issue-67fea13a-07-command-executor/mat/analysis/: __init__.py
.worktrees/issue-67fea13a-07-command-executor/mat/coordination/: __init__.py  conflict_detector.py
.worktrees/issue-67fea13a-07-command-executor/mat/core/: __init__.py  agent_registry.py  file_lock_manager.py
.worktrees/issue-67fea13a-07-command-executor/mat/execution/: __init__.py  command_executor.py
.worktrees/issue-67fea13a-07-command-executor/mat/tests/: __init__.py  test_command_analyzer.py  test_file_lock_manager.py
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
mat/analysis/: command_analyzer.py
mat/coordination/: __init__.py
mat/tests/: test_analyzer_conflict_integration.py  test_analyzer_lockmanager_integration.py  test_command_executor.py  test_conflict_executor_integration.py  test_exceptions.py  test_merged_modules_interaction.py  test_public_api_integration.py  test_registry_lockmanager_integration.py
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
