[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shell-coordination"
version = "0.1.0"
description = "Distributed multi-agent system for collaborative shell command execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Young", email = "research@automate-capture.com" },
]
keywords = ["multi-agent", "distributed", "terminal", "consensus", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # no external dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/agent-shell-coordination"
Documentation = "https://lumi-node.github.io/agent-shell-coordination/"
Repository = "https://github.com/Lumi-node/agent-shell-coordination"
Issues = "https://github.com/Lumi-node/agent-shell-coordination/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
