[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-terminal"
version = "0.1.0"
description = "A distributed system enabling autonomous AI agents to collaboratively execute shell commands"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Claude Code"}]

[project.scripts]
mat-coordinate = "mat.cli:main"

[tool.setuptools]
packages = ["mat"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["mat/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
